--- a/workshops/EBS Create Order/ics400.md
+++ b/workshops/EBS Create Order/ics400.md
@@ -78,7 +78,7 @@ NOTE: The "SOAP" header will show that the connection is both "Trigger and Invok
 ![](images/300/image009.png) 
 
 **1.2.7** For the *WSDL URL*, enter the property value for the WSDL as follows:
-_https://cloudaccelerate.github.io/TTC-iPaaSArtifacts/ics/createOrder.wsdl_
+_https://github.com/OracleCPS/oichybridintegration/blob/CSH-Austin/artifacts/createorder.wsdl_
 
 ![](images/300/image010.png) 
 
@@ -791,17 +791,24 @@ Progress Note: You've mapped the 21 target variables and are almost done... but 
 
 **3.5** Expand the **createOrder** operation by clicking on it, then open the auto-generated sample request **Request 1** by double-clicking on it.  An empty request payload will be generated.
 
-![](images/400/image076.png)
+![](images/400/soapTest1.png)
 
 **3.6** In the request payload, as in Lab 300, replace the question marks with the following test values:
 
 - **AccountName**: _Imaging Innovations, Inc._
+- **AccountID**: _1002_
+- **OrderTypeID**: _1430_
 - **Comment**: _Lab 400 request from SoapUI_
 - **ItemID**: _2155_
+- **Item**: _AS18947_
+- **Price**: _1208_
+- **ITemDescription**: _Sentinel Deluxe Desktop_
+- **Category**: _COMPUTER_
 - **Qty**: _1_
-- **Price**: _3333_
+- **UOM**: _Ea_
 
-![](images/400/image077.png)
+
+![](images/400/soapTest2.png)
 
 **3.7** Next we need to add the authorization credentials so ICS will allow the request from SoapUI.  ICS uses basic username/password authentication.
 
@@ -847,7 +854,7 @@ Progress Note: You've mapped the 21 target variables and are almost done... but 
 
 **3.20** The return payload of the ICS integration will show the Order Number and the status of `S` for _Success_.
 
-![](images/400/image078.png)
+![](images/400/soapTest3.png)
 
 ### **3.2:**	Verify the Order was Created in EBS
 
