--- a/workshops/EBS Create Order/ics400.md
+++ b/workshops/EBS Create Order/ics400.md
@@ -15,7 +15,7 @@ The OIC integration that we'll be building is shown in the following picture:
 
 Here is a description of what is happening with this integration:
 
-SoapUI will be used to test the exposed Web Service endpoint of the ICS integration called *UserXX Create EBS Order* (where XX will be the Number assigned by the Instructor).   This integration has 3 connections.  The incoming message is received by the incoming *UserXX SOAP* Soap Connection.  The *UserXX Create EBS Order* orchestration makes 1 query into the database using the *UserXX Oracle DB 12c* connection to get details needed to create an order.  The orchestration finally uses the *UserXX EBS OPERATIONS* EBS Adapter connection for creating the order in EBS.  After the order is created in EBS, the Order Number is returned to the calling web service.
+SoapUI will be used to test the exposed Web Service endpoint of the ICS integration called *UserXX Create EBS Order* (where XX will be the Number assigned by the Instructor).   This integration has 2 connections.  The incoming message is received by the incoming *UserXX SOAP* Soap Connection which contains  the details needed to create an order. The orchestration finally uses the *UserXX EBS OPERATIONS* EBS Adapter connection for creating the order in EBS.  After the order is created in EBS, the Order Number is returned to the calling web service.
 
 ## Objectives
 
