image changes in integration

--- a/workshops/EBS Create Order/ics400.md
+++ b/workshops/EBS Create Order/ics400.md
@@ -212,7 +212,7 @@ Note: Select the *Configure Agents* button so we can setup the association betwe
 
 ![](images/300/image033.png)
 
-**2.1.4** In the **Create Integration - Select a Style**, select the **App Driven Orchestration** style.  We want to use this because our integration will have one invocations to the Database and later another couple invocations to the EBS API to create an order - the **Basic Map Data** style only has a single target service invocation as well as additional invocations for data enrichment of the payload before the target invocation call is made.
+**2.1.4** In the **Create Integration - Select a Style**, select the **App Driven Orchestration** style.  We want to use this because our integration will have one invocations to the EBS API to create an order as well as additional invocations for data enrichment of the payload before the target invocation call is made. The **Basic Map Data** style only has a single target service invocation.
 
 ![](images/300/lab3001.png)
 
@@ -228,7 +228,7 @@ After you've filled in the information, select the **Create** button
 
 **2.1.6** Observe the design canvas for the new integration.  (The various features of the ICS designer were covered in lab 100 **Exploring ICS** earlier in this workshop)
 
-![](images/400/lab4002.png)
+![](images/400/lab4001a.png)
 
 **2.1.7** Create the Trigger for the orchestration. This integration will have a SOAP WSDL endpoint as defined when we created the **UserXX SOAP** connector earlier.
 
@@ -294,7 +294,8 @@ After reviewing, click on the **Done** button
 
 ![](images/400/lab4003.png)
 
-**2.3.5** In the *Basic Info* section of the _Configure Oracle E-Business Suite Adapter Endpoint_ wizard, give the endpoint a name of `createEBSOrder`.
+**2.3.5** In the *Basic Info* section of the _Configure Oracle E-Business Suite Adapter Endpoint_ wizard, give the endpoint a name of `EBS_Reference`.
+(_Note - In the figure it says createEBSOrder. You can name the endpoint anything._)
 
 **2.3.6** After giving the invocation a name, select the *Next* button.
 
@@ -328,7 +329,7 @@ Note that the *Service Status* of `Ready to Use` indicates that the API has alre
 
 ![](images/400/image023.png)
 
-**2.3.13** Observe that both the mapping and invocation to the EBS adapter now show up in the orchestration with the name `createEBSOrder`.
+**2.3.13** Observe that both the mapping and invocation to the EBS adapter now show up in the orchestration with the name `EBS_Reference`.  
 
 ![](images/400/lab4004.png)
 
